# SobelFilter

./: CMakeLists.txt  LICENSE.md  README.md  main.c
images/: Aurora.pgm  Aurora.ppm  Aurora.sobel.pgm  cat.pgm  cat.sobel.pgm  wiki.sobel.pgm
include/: pgm.h  ppm.h  sobel.h
src/: pgm.c  ppm.c  sobel.c
